# SlicerParallelTest

./: CMakeLists.txt  README.md
ParallelTestCLI/: CMakeLists.txt  ParallelTestCLI.py  ParallelTestCLI.xml
ParallelTestCppCLI/: CMakeLists.txt  ParallelTestCppCLI.cxx
ParallelTestDriver/: CMakeLists.txt  ParallelTestDriver.py
ParallelTestDriver/Resources/UI/: ParallelTestDriver.ui
